<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_courses"
        android:icon="@drawable/ic_courses_24"
        android:title="@string/title_courses" />

    <item
        android:id="@+id/navigation_hardware"
        android:icon="@drawable/ic_hardware"
        android:title="@string/title_hardware" />

    <item
        android:id="@+id/navigation_internetAndVpn"
        android:icon="@drawable/ic_vpn_24"
        android:title="@string/title_internet_and_vpn" />

    <item
        android:id="@+id/navigation_statistic"
        android:icon="@drawable/ic_statistics_24"
        android:title="@string/title_statistic" />



</menu>